# sturdio

./: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml  sturdio-config.cmake.in
include/sturdio/: binary-file.hpp  io-tools.hpp  yaml-parser.hpp
src/: binary-file.cpp  io-tools.cpp  sturdio-python.cpp  yaml-parser.cpp
src/sturdio/: __init__.py  __init__.pyi
src/sturdio/_sturdio_core/: __init__.pyi  iotools.pyi
tests/: test_yaml_parser.cpp
